--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -8,10 +8,12 @@
     "success_color": "#307a07",
     "warning_color": "#ed8a00",
     "error_color": "#cb2b2b",
-    "heading_font": "univers_next_n4",
-    "heading_letter_spacing": 18,
-    "text_font": "univers_next_n4",
-    "text_font_size_desktop": 14,
+    "heading_font": "lato_n4",
+    "heading_font_size_factor": 1.2,
+    "heading_letter_spacing": 20,
+    "text_font": "noto_serif_n4",
+    "text_font_size_mobile": 15,
+    "text_font_size_desktop": 20,
     "button_letter_spacing": 18,
     "favicon": "shopify:\/\/shop_images\/ak-favicon.png",
     "content_for_index": [
