--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,12 +1,3 @@
-/*
-* ------------------------------------------------------------
-* IMPORTANT: The contents of this file are auto-generated.
-*
-* This file may be updated by the Shopify admin theme editor
-* or related systems. Please exercise caution as any changes
-* made to this file may be overwritten.
-* ------------------------------------------------------------
-*/
 {
   "current": {
     "section_vertical_spacing": "md",
@@ -18,13 +9,13 @@
     "warning_color": "#ed8a00",
     "error_color": "#cb2b2b",
     "heading_font": "lato_n4",
-    "heading_font_size_factor": 1.2,
+    "heading_font_size_factor": 1.8,
     "heading_letter_spacing": 20,
     "text_font": "noto_serif_n4",
     "text_font_size_mobile": 15,
-    "text_font_size_desktop": 20,
+    "text_font_size_desktop": 28,
     "button_letter_spacing": 18,
-    "favicon": "shopify://shop_images/ak-favicon-3.png",
+    "favicon": "shopify:\/\/shop_images\/ak-favicon-3.png",
     "content_for_index": [
 
     ],
